fix(portal,admin): Function Unit access visibility and deploy preservation
Portal loads BU roles with profileContext=PORTAL, matches access by role code, denies unconfigured units, and fetches access live without stale cache. Admin import preserves Access on re-import and copies it to new catalog versions on deploy. Also includes sub-table PK enricher, PK allocation fixes, and DW table binding form improvements.

Co-authored-by: Cursor <cursoragent@cursor.com>